# MultiplayerPong

./: .gitignore  README.md
client/: CMakeLists.txt  main.cpp
server/: main_process.py  player.py  room_thread.py  server_address.json
